--- a/style.css
+++ b/style.css
@@ -192,8 +192,6 @@ figure.right img			{width: 400px;}
 											padding: 15px;
 											background-color: rgba(55,55,55,0.6);
 											font-size: 18px;
-											margin-left: 70px;
-											margin-bottom: 45px;
 											color: rgb(235,235,235);}
 
 /* 概要 */
@@ -209,9 +207,9 @@ figure.right img			{width: 400px;}
 											padding: 36px 0;
 											font-size: 38px;}
 
-.gaiyou .fa-database	{background-color: rgb(200,150,50);}
-.gaiyou .fa-bar-chart-o	{background-color: rgb(100,150,80);}
-.gaiyou .fa-envelope	{background-color: rgb(155,180,235);}
+.gaiyou .fa-bicycle		{background-color: rgb(200,150,50);}
+.gaiyou .fa-user-plus	{background-color: rgb(100,150,80);}
+.gaiyou .fa-user-circle	{background-color: rgb(155,180,235);}
 
 .gaiyou h2						{margin: 0;
 											padding: 5px 0;
@@ -269,12 +267,12 @@ figure.right img			{width: 400px;}
 .sns li a:hover				{opacity: 0.8;}
 
 .fa-twitter						{background-color: #55acee;}
-.fa-instagram					{background-color: pink;}
+.fa-instagram					{background-color: #3f729b;}
 
 /* TOPページ グリッド */
 .top 									{display: grid;
-											grid-template-columns: [left] 1fr [main] 1140px [main-end]  1fr [right];
-											grid-template-rows: [head] auto [menu] auto [img] auto [pickup] auto [news] auto [foot] auto [bottom];}
+											grid-template-columns: [left] minmax(20px,1fr) [main] minmax(auto,1140px) [main-end]  minmax(20px,1fr) [right];
+											grid-template-rows: [head] auto [menu] auto [img] auto [catch] auto [pickup] auto [news] auto [foot] auto [bottom];}
 
 .site									{grid-column-start: left;
 											grid-column-end: right;
@@ -292,7 +290,9 @@ figure.right img			{width: 400px;}
 											grid-column-end: right;
 											grid-row-start: img;
 											justify-self: start;
-											align-self: end;}
+											align-self: end;
+											margin-left: 70px;
+											margin-bottom: 45px;}
 
 .pickup								{grid-column-start: main;
 											grid-row-start: pickup;
@@ -314,6 +314,22 @@ figure.right img			{width: 400px;}
 
 .copyright						{grid-column-start: main;
 											grid-row-start: foot;}
+
+/* ############# 767px以下 ############## */
+@@media (max-width: 767px) {
+
+	.menu ul						{flex-direction: column;}
+
+}
+/* ############# 599px以下 ############## */
+@@media (max-width: 599px) {
+
+	.catch							{grid-row-start: catch;
+											margin-left: 0;
+											margin-bottom: 20px;
+											padding: 0;
+											font-size: 5vw;}
+}
 
 /* メンバーサブ */
 .member-sub						{width: 900px;
@@ -351,3 +367,4 @@ figure.right img			{width: 400px;}
 
 .introduction	th			{text-align: left;
 											font-weight: normal;}
+
