--- a/style.css
+++ b/style.css
@@ -266,7 +266,7 @@ figure.right img			{width: 400px;}
 
 .sns li a:hover				{opacity: 0.8;}
 
-.fa-twitter						{background-color: #55acee;}
+.fa-twitter						{background-color: #00aced;}
 .fa-instagram					{background-color: #3f729b;}
 
 /* TOPページ グリッド */
